--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="it">
         
         <head>
             <title>Il mio Viaggio a Londra</title>
@@ -67,8 +67,8 @@
                     <h3>Cose da fare</h3>
                     <ul>
                         <li>Visitare la Tower of London &#128500;</li>
-                        <li>Visitare Greenwich &#10004</li>
-                        <li>Ascoltare un artista di strada a Covent Garden &#10004</li>
+                        <li>Visitare Greenwich &#10004;</li>
+                        <li>Ascoltare un artista di strada a Covent Garden &#10004;</li>
                         <li>Mangiare il tipico Fish and Chips inglese &#128500;</li>
                     </ul>
                         
